--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,7 @@ authors = [
     { name="Litu Ou", email="lituou907@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.12"
-dependencies = [
-    "mcp[cli]>=1.6.0",
-]
+requires-python = "==3.11"
 
 [project.scripts]
 mcp-agent-server = "mcp_agent_server:main"
